--- a/cita_doc/package.json
+++ b/cita_doc/package.json
@@ -26,6 +26,8 @@
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^6.0.0",
     "date-fns": "^2.27.0",
+    "jwt-decode": "^3.1.2",
+    "ngx-autosize": "^1.8.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
