--- a/cita_doc/package.json
+++ b/cita_doc/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^6.0.0",
     "date-fns": "^2.27.0",
     "jwt-decode": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
     "ngx-autosize": "^1.8.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
