--- a/cita_doc/package.json
+++ b/cita_doc/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^6.0.0",
     "date-fns": "^2.27.0",
     "jwt-decode": "^3.1.2",
